--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-# API base URL (chat + shop). Defaults to deployed Render API.
+# Backend API base URL (chat + shop). Unset = use deployed Render API.
+# Only set if you use a different backend (e.g. local or another deployment).
 # VITE_API_URL=https://agentic-commerce-api-f1fx.onrender.com
